exclude from tagging

--- a/blueprints/Integration Environment (EC2 & AWS RDS).yaml
+++ b/blueprints/Integration Environment (EC2 & AWS RDS).yaml
@@ -5,6 +5,10 @@ kind: blueprint
 metadata:
   description: >
     Java application with a managed RDS database deployed with TerraForm.
+  tags:
+    - yakir-key1: yakir-value1
+    - yakir-key2: yakir-value2
+
 
 clouds:
   - AWS: eu-west-1
