--- a/services/rds-mysql-aurora-cluster/rds-mysql-aurora-cluster.yaml
+++ b/services/rds-mysql-aurora-cluster/rds-mysql-aurora-cluster.yaml
@@ -16,6 +16,8 @@ module:
   source: github.com/cloudshell-colony/terraform/rds-mysql-aurora-cluster
   # The source element is the location of your Terraform module,
   # Both public and private repos are supported
+  exclude_from_tagging:
+    - aws_rds_cluster
 
 
 terraform_version: 0.11.11
