--- a/services/rds-mysql/rds-mysql.yaml
+++ b/services/rds-mysql/rds-mysql.yaml
@@ -17,6 +17,8 @@ module:
   source: github.com/cloudshell-colony/terraform/rds-mysql
   # The source element is the location of your Terraform module,
   # Both public and private repos are supported
+  exclude_from_tagging:
+    - aws_db_instance
 
 
 terraform_version: 0.11.11
