--- a/blueprints/Dev & Test Environment (All-in-One, AWS).yaml
+++ b/blueprints/Dev & Test Environment (All-in-One, AWS).yaml
@@ -7,7 +7,7 @@ metadata:
     A simple multi-tier application deployed on a single EC2 instance.
 
 clouds:
-  - AWS: eu-west-1
+  - aws/yakir-compute
 
 # These are the blueprint parameters and their default values.
 # The values can be changed when creating a sandbox based on this
